--- a/KINOv2/KINOv2/Views/Shared/LoginPartial.cshtml
+++ b/KINOv2/KINOv2/Views/Shared/LoginPartial.cshtml
@@ -7,21 +7,21 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
-        <ul class="nav navbar-nav navbar-right">
-            <li>
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Здравствуйте @UserManager.GetUserName(User)!</a>
+        <ul class="navbar-nav navbar-right">
+            <li class="nav-item">
+                <a class="nav-link" asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Здравствуйте @UserManager.GetUserName(User)!</a>
             </li>
-            <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link" style="color:#fff">Выйти</button>
+            <li class="nav-item">
+                <button type="submit" class="btn btn-link nav-link">Выйти</button>
             </li>
         </ul>
     </form>
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="" asp-controller="Account" asp-action="Register">Регистрация</a></li>
-        <li><a asp-area="" asp-controller="Account" asp-action="Login">Выполнить вход</a></li>
+    <ul class="navbar-nav navbar-right">
+        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Account" asp-action="Register">Регистрация</a></li>
+        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">Выполнить вход</a></li>
     </ul>
 }
 
