--- a/KINOv2/KINOv2/Views/Shared/_Layout.cshtml
+++ b/KINOv2/KINOv2/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,34 +24,56 @@
 <body>
     <div class="up-button-mobile up-button-hidden" onclick="onUpButtonClick()"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>
     <div class="up-button up-button-hidden" onclick="onUpButtonClick()"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>
-    <nav class="fanavbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand"></a>
+    @*<nav class="navbar fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    @*<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand"></a>
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a asp-area="" asp-controller="Home" asp-action="Index">Главная</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Affiche">Афиша</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Halls">Залы</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Contact">Контакты</a></li>
+                    </ul>
+                    @await Html.PartialAsync("LoginPartial")
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Главная</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Affiche">Афиша</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Halls">Залы</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Контакты</a></li>
+        </nav>*@
+
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mr-auto mr">
+                    <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Главная</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Affiche">Афиша</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Halls">Залы</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Контакты</a></li>
                 </ul>
                 @await Html.PartialAsync("LoginPartial")
             </div>
         </div>
     </nav>
-    <div class="container body-content">
+
+    <div class="container" style="min-height:85vh">
         <div class="content">
             @RenderBody()
         </div>
-        <footer>
-            <hr />
+    </div>
+    <div class="w-100 mb-2"></div>
+    <div class="container mx-auto">
+        <footer class="">
+            <hr style="border-top: 1px solid #ffffff" />
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4">
@@ -76,16 +98,19 @@
     </div>
 
     <environment include="Development">
+
         <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/popper/dist/umd/popper.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/lib/MvcGrid/js/mvc-grid.js"></script>
+
         @*<script>
-            
-        </script>*@
+
+            </script>*@
         @*<script src="~/lib/jquery/dist/core.js"></script>*@
         <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
         <script src="~/lib/jquery-ajax-unobtrusive/dist/jquery.unobtrusive-ajax.js" asp-append-version="true"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/lib/rich-text-editor/js/jquery.richtext.min.js"></script>
+        <script src="~/lib/rich-text-editor/js/jquery.richtext.js"></script>
         <script src="~/lib/star-rating/js/jquery.rating.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
         <script src="~/js/slideshow.js" asp-append-version="true"></script>
