--- a/KINOv2/KINOv2/Views/Manage/Index.cshtml
+++ b/KINOv2/KINOv2/Views/Manage/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@model IndexViewModel
 @{
     ViewData["Title"] = "Профиль";
-    ViewData.AddActivePage(ManageNavPages.Index);
     string imgPath = "";
     if (Model.ProfileImage is null)
     {
@@ -13,38 +12,198 @@
     }
 }
 
-<h3>@ViewData["Title"]</h3>
-<div class="row">
-    <div class="col-md-3">
-        <img height="200" width="200" src="@imgPath" />
-    </div>
-    <div class="col-md-6">
-        <div style="margin-bottom:5px;">
-            <span>@Model.Username</span>
-        </div>
-        <div style="margin-bottom:5px;">
-            <span>@Model.Name @Model.SurName, @Model.Age</span>
-        </div>
-        <div style="margin-bottom:5px;">
-            <label class="text-info" style="width:60px" asp-for="@Model.City"></label>
-            <span>@Model.City</span>
-        </div>
-        <div style="margin-bottom:5px;">
-            <label class="text-info" style="width:60px" asp-for="@Model.Email"></label>
-            <span>@Model.Email</span>
-        </div>
-        <div style="margin-bottom:5px;">
-            <label class="text-info" style="width:60px" asp-for="@Model.About"></label>
-            <p style="word-break:break-all">@Model.About</p>
-        </div>
-    </div>
-</div>
 
-<h4>Избранные фильмы</h4>
-<div class="row">
-    <form>
+<h2>Профиль</h2>
 
-    </form>
+<div class="d-md-flex flex-md-row">
+    <ul class="nav nav-tabs d-md-inline-flex align-self-md-start flex-md-column" id="myTab" role="tablist">
+        <li class="nav-item">
+            <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-expanded="true">Профиль</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="history-tab" data-toggle="tab" href="#history" role="tab" aria-controls="history">История</a>
+        </li>
+        <li class="nav-item dropdown d-md-none text-center">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Настройки</a>
+            <div class="dropdown-menu" style="left:-30px">
+                <a class="dropdown-item" id="password-tab" data-toggle="tab" href="#password" role="tab" aria-controls="password">Сменить пароль</a>
+                <a class="dropdown-item" id="password-tab" data-toggle="tab" href="#password" role="tab" aria-controls="password">PLACEHOLDER</a>
+                <a class="dropdown-item" id="password-tab" data-toggle="tab" href="#password" role="tab" aria-controls="password">PLACEHOLDER</a>
+            </div>
+        </li>
+    </ul>
+    <div class="tab-content py-3 px-md-3 py-md-0 w-100" id="myTabContent">
+        <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <img class="img-fluid img-thumbnail w-75 d-block mx-auto" src="@imgPath" />
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="text-center mb-1">
+                        <span class="h4 text-orange">@Model.Username</span>
+                    </div>
+                    <div class="text-center mb-1">
+                        <span class="text-center">@Model.Name @Model.SurName, @Model.Age</span>
+                    </div>
+                    <div class="row">
+                        <label class="text-info col-4 text-right" asp-for="@Model.City"></label>
+                        <span class="col">@Model.City</span>
+                    </div>
+                    <div class="row">
+                        <label class="text-info col-4 text-right" asp-for="@Model.Email"></label>
+                        <span class="col">@Model.Email</span>
+                    </div>
+                    <div class="row">
+                        <label class="text-info col-4 text-right" style="width:60px" asp-for="@Model.About"></label>
+                        <p class="col" style="word-break:break-all">@Model.About 123 2334</p>
+                    </div>
+                </div>
+            </div>
+
+            <h3>Избранные фильмы</h3>
+            <div class="row">
+                <h1 class="mx-auto">Типа слайдер</h1>
+            </div>
+        </div>
+        <div class="tab-pane fade" id="history" role="tabpanel" aria-labelledby="history-tab">
+            <table class="table">
+                <thead class="float-left float-md-none history-table-header " style="clear:both">
+                    <tr>
+                        <th class="d-block d-md-table-cell border-bottom-0">Дата заказа</th>
+                        <th class="d-block d-md-table-cell border-bottom-0">Дата сеанса</th>
+                        <th class="d-block d-md-table-cell border-bottom-0">Фильм</th>
+                        <th class="d-block d-md-table-cell border-bottom-0">Зал</th>
+                        <th class="d-block d-md-table-cell border-bottom-0">Стоимость</th>
+                        <th class="d-block d-md-table-cell border-bottom-0">Билеты (шт.)</th>
+                    </tr>
+                </thead>
+                <tbody class="float-md-none position-relative history-table-body" style="overflow-x:auto; white-space:nowrap; max-width:250px; ">
+                    <tr class=" float-md-none d-inline-block d-md-table-row">
+                        <td class="d-block d-md-table-cell">1</td>
+                        <td class="d-block d-md-table-cell">Mark</td>
+                        <td class="d-block d-md-table-cell">Otto</td>
+                        <td class="d-block d-md-table-cell">mdo</td>
+                        <td class="d-block d-md-table-cell">Otto</td>
+                        <td class="d-block d-md-table-cell">mdo</td>
+                    </tr>
+                    <tr class=" float-md-none d-inline-block d-md-table-row">
+                        <td class="d-block d-md-table-cell">2</td>
+                        <td class="d-block d-md-table-cell">Jacob</td>
+                        <td class="d-block d-md-table-cell">Thornton</td>
+                        <td class="d-block d-md-table-cell">fat</td>
+                        <td class="d-block d-md-table-cell">Otto</td>
+                        <td class="d-block d-md-table-cell">mdo</td>
+                    </tr>
+                    <tr class=" float-md-none d-inline-block d-md-table-row">
+                        <td class="d-block d-md-table-cell">3</td>
+                        <td class="d-block d-md-table-cell">Larry</td>
+                        <td class="d-block d-md-table-cell">the Bird</td>
+                        <td class="d-block d-md-table-cell">twitter</td>
+                        <td class="d-block d-md-table-cell">Otto</td>
+                        <td class="d-block d-md-table-cell">mdo</td>
+                    </tr>
+                    <tr class=" float-md-none d-inline-block d-md-table-row">
+                        <td class="d-block d-md-table-cell">3</td>
+                        <td class="d-block d-md-table-cell">Larry</td>
+                        <td class="d-block d-md-table-cell">the Bird</td>
+                        <td class="d-block d-md-table-cell">twitter</td>
+                        <td class="d-block d-md-table-cell">Otto</td>
+                        <td class="d-block d-md-table-cell">mdo</td>
+                    </tr>
+                    <tr class=" float-md-none d-inline-block d-md-table-row">
+                        <td class="d-block d-md-table-cell">3</td>
+                        <td class="d-block d-md-table-cell">Larry</td>
+                        <td class="d-block d-md-table-cell">the Bird</td>
+                        <td class="d-block d-md-table-cell">twitter</td>
+                        <td class="d-block d-md-table-cell">Otto</td>
+                        <td class="d-block d-md-table-cell">mdo</td>
+                    </tr>
+                    <tr class=" float-md-none d-inline-block d-md-table-row">
+                        <td class="d-block d-md-table-cell">3</td>
+                        <td class="d-block d-md-table-cell">Larry</td>
+                        <td class="d-block d-md-table-cell">the Bird</td>
+                        <td class="d-block d-md-table-cell">twitter</td>
+                        <td class="d-block d-md-table-cell">Otto</td>
+                        <td class="d-block d-md-table-cell">mdo</td>
+                    </tr>
+                    <tr class=" float-md-none d-inline-block d-md-table-row">
+                        <td class="d-block d-md-table-cell">3</td>
+                        <td class="d-block d-md-table-cell">Larry</td>
+                        <td class="d-block d-md-table-cell">the Bird</td>
+                        <td class="d-block d-md-table-cell">twitter</td>
+                        <td class="d-block d-md-table-cell">Otto</td>
+                        <td class="d-block d-md-table-cell">mdo</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="tab-pane fade" id="password" role="tabpanel" aria-labelledby="password-tab">
+            123
+            <div class="container-fixed" style="text-align:center">
+                <div class="row row-2">
+                    <div class="col col-12">North</div>
+                </div><div class="row row-10">
+                    <div class="col col-3">West</div>
+                    <div class="col col-4">Center</div>
+                    <div class="col col-5">East</div>
+                </div><div class="row row-1">
+                    <div class="col col-12">South</div>
+                </div>
+            </div>
+        </div>
+
+        @*<div class="position-relative">
+            <div class="table-responsive">
+                <table class="table">
+                    <thead class="float-left float-md-none" style="clear:both">
+                        <tr>
+                            <th class="d-block d-md-table-cell">#</th>
+                            <th class="d-block d-md-table-cell">First</th>
+                            <th class="d-block d-md-table-cell">Last</th>
+                            <th class="d-block d-md-table-cell">Handle</th>
+                        </tr>
+                    </thead>
+                    <tbody class="float-left  float-md-none">
+                        <tr class="float-left float-md-none ">
+                            <td class="d-block d-md-table-cell">1</td>
+                            <td class="d-block d-md-table-cell">Mark</td>
+                            <td class="d-block d-md-table-cell">Otto</td>
+                            <td class="d-block d-md-table-cell">mdo</td>
+                        </tr>
+                        <tr class="float-left float-md-none ">
+                            <td class="d-block d-md-table-cell">2</td>
+                            <td class="d-block d-md-table-cell">Jacob</td>
+                            <td class="d-block d-md-table-cell">Thornton</td>
+                            <td class="d-block d-md-table-cell">fat</td>
+                        </tr>
+                        <tr class="float-left float-md-none ">
+                            <td class="d-block d-md-table-cell">3</td>
+                            <td class="d-block d-md-table-cell">Larry</td>
+                            <td class="d-block d-md-table-cell">the Bird</td>
+                            <td class="d-block d-md-table-cell">twitter</td>
+                        </tr>
+                        <tr class="float-left float-md-none ">
+                            <td class="d-block d-md-table-cell">3</td>
+                            <td class="d-block d-md-table-cell">Larry</td>
+                            <td class="d-block d-md-table-cell">the Bird</td>
+                            <td class="d-block d-md-table-cell">twitter</td>
+                        </tr>
+                        <tr class="float-left float-md-none ">
+                            <td class="d-block d-md-table-cell">3</td>
+                            <td class="d-block d-md-table-cell">Larry</td>
+                            <td class="d-block d-md-table-cell">the Bird</td>
+                            <td class="d-block d-md-table-cell">twitter</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>*@
+
+            
+
+
+
+    </div>
 </div>
 
 
