fixed datetimepicker source path

--- a/KINOv2/KINOv2/Views/Manage/Index.cshtml
+++ b/KINOv2/KINOv2/Views/Manage/Index.cshtml
@@ -13,7 +13,7 @@
 }
 
 
-<h2>Профиль</h2>
+<h1>Профиль</h1>
 
 <div class="d-md-flex flex-md-row">
     <ul class="nav nav-tabs d-md-inline-flex align-self-md-start flex-md-column col-md-2" id="myTab" role="tablist">
@@ -60,101 +60,14 @@
                 </div>
             </div>
 
-            <h3>Избранные фильмы</h3>
-            @*<div class="row" style="height:600px;">*@
-                <h1 class="mx-auto">Типа слайдер</h1>
+            <h2>Избранные фильмы</h2>
+            <div class="row">
+                <h1 class="mx-auto">Типа таблица</h1>
 
-                <div class="swiper-container swiper-container-selected" style="max-width:800px;">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide swiper-slide-selected"><img class="img-fluid" src="@imgPath" /></div>
-                        <div class="swiper-slide swiper-slide-selected">Slide 2</div>
-                        <div class="swiper-slide swiper-slide-selected">Slide 3</div>
-                        <div class="swiper-slide swiper-slide-selected">Slide 4</div>
-                        <div class="swiper-slide swiper-slide-selected">Slide 5</div>
-                        <div class="swiper-slide swiper-slide-selected">Slide 6</div>
-                        <div class="swiper-slide swiper-slide-selected">Slide 7</div>
-                        <div class="swiper-slide swiper-slide-selected">Slide 8</div>
-                        <div class="swiper-slide swiper-slide-selected">Slide 9</div>
-                        <div class="swiper-slide swiper-slide-selected">Slide 10</div>
-                    </div>
-                    <!-- Add Pagination -->
-                    <div class="swiper-pagination swiper-pagination-selected"></div>
-                </div>
-
-            @*</div>*@
+            </div>
         </div>
         <div class="tab-pane fade" id="history" role="tabpanel" aria-labelledby="history-tab">
-            <table class="table">
-                <thead class="float-left float-md-none history-table-header " style="clear:both">
-                    <tr>
-                        <th class="d-block d-md-table-cell border-bottom-0">Дата заказа</th>
-                        <th class="d-block d-md-table-cell border-bottom-0">Дата сеанса</th>
-                        <th class="d-block d-md-table-cell border-bottom-0">Фильм</th>
-                        <th class="d-block d-md-table-cell border-bottom-0">Зал</th>
-                        <th class="d-block d-md-table-cell border-bottom-0">Стоимость</th>
-                        <th class="d-block d-md-table-cell border-bottom-0">Билеты (шт.)</th>
-                    </tr>
-                </thead>
-                <tbody class="float-md-none position-relative history-table-body" style="overflow-x:auto; white-space:nowrap; max-width:250px; ">
-                    <tr class=" float-md-none d-inline-block d-md-table-row">
-                        <td class="d-block d-md-table-cell">1</td>
-                        <td class="d-block d-md-table-cell">Mark</td>
-                        <td class="d-block d-md-table-cell">Otto</td>
-                        <td class="d-block d-md-table-cell">mdo</td>
-                        <td class="d-block d-md-table-cell">Otto</td>
-                        <td class="d-block d-md-table-cell">mdo</td>
-                    </tr>
-                    <tr class=" float-md-none d-inline-block d-md-table-row">
-                        <td class="d-block d-md-table-cell">2</td>
-                        <td class="d-block d-md-table-cell">Jacob</td>
-                        <td class="d-block d-md-table-cell">Thornton</td>
-                        <td class="d-block d-md-table-cell">fat</td>
-                        <td class="d-block d-md-table-cell">Otto</td>
-                        <td class="d-block d-md-table-cell">mdo</td>
-                    </tr>
-                    <tr class=" float-md-none d-inline-block d-md-table-row">
-                        <td class="d-block d-md-table-cell">3</td>
-                        <td class="d-block d-md-table-cell">Larry</td>
-                        <td class="d-block d-md-table-cell">the Bird</td>
-                        <td class="d-block d-md-table-cell">twitter</td>
-                        <td class="d-block d-md-table-cell">Otto</td>
-                        <td class="d-block d-md-table-cell">mdo</td>
-                    </tr>
-                    <tr class=" float-md-none d-inline-block d-md-table-row">
-                        <td class="d-block d-md-table-cell">3</td>
-                        <td class="d-block d-md-table-cell">Larry</td>
-                        <td class="d-block d-md-table-cell">the Bird</td>
-                        <td class="d-block d-md-table-cell">twitter</td>
-                        <td class="d-block d-md-table-cell">Otto</td>
-                        <td class="d-block d-md-table-cell">mdo</td>
-                    </tr>
-                    <tr class=" float-md-none d-inline-block d-md-table-row">
-                        <td class="d-block d-md-table-cell">3</td>
-                        <td class="d-block d-md-table-cell">Larry</td>
-                        <td class="d-block d-md-table-cell">the Bird</td>
-                        <td class="d-block d-md-table-cell">twitter</td>
-                        <td class="d-block d-md-table-cell">Otto</td>
-                        <td class="d-block d-md-table-cell">mdo</td>
-                    </tr>
-                    <tr class=" float-md-none d-inline-block d-md-table-row">
-                        <td class="d-block d-md-table-cell">3</td>
-                        <td class="d-block d-md-table-cell">Larry</td>
-                        <td class="d-block d-md-table-cell">the Bird</td>
-                        <td class="d-block d-md-table-cell">twitter</td>
-                        <td class="d-block d-md-table-cell">Otto</td>
-                        <td class="d-block d-md-table-cell">mdo</td>
-                    </tr>
-                    <tr class=" float-md-none d-inline-block d-md-table-row">
-                        <td class="d-block d-md-table-cell">3</td>
-                        <td class="d-block d-md-table-cell">Larry</td>
-                        <td class="d-block d-md-table-cell">the Bird</td>
-                        <td class="d-block d-md-table-cell">twitter</td>
-                        <td class="d-block d-md-table-cell">Otto</td>
-                        <td class="d-block d-md-table-cell">mdo</td>
-                    </tr>
-                </tbody>
-            </table>
-
+            <h2>История заказов</h2>
             <table id="history-table" class="table bg-dark">
                 <thead>
                     <tr>
@@ -236,7 +149,7 @@
         </div>
         <div class="tab-pane fade" id="password" role="tabpanel" aria-labelledby="password-tab">
             <div class="row">
-                <h4>Смена пароля</h4>
+                <h2 class="col-12">Смена пароля</h2>
                 <div class="col-12">
                     <form asp-action="ChangePassword" asp-controller="Manage" method="post">
                         <div asp-validation-summary="All" class="text-danger"></div>
@@ -255,69 +168,14 @@
                             <input asp-for="ChangePasswordModel.ConfirmPassword" class="form-control" />
                             <span asp-validation-for="ChangePasswordModel.ConfirmPassword" class="text-danger"></span>
                         </div>
-                        <button type="submit" class="btn border-orange">Update password</button>
+                        <button type="submit" class="btn border-orange float-right">Update password</button>
                     </form>
-                    @*<form asp-controller="" asp-action=""
-                                  data-ajax-begin="onBegin" data-ajax-complete="onComplete"
-                        data-ajax-failure="onFailed" data-ajax-success="onSuccess"
-                                  data-ajax="true" data-ajax-method="POST">
-                                <input type="submit" value="Save" class="btn btn-primary" />
-                                <div id="Results"></div>
-                            </form>*@
                 </div>
             </div>
-
         </div>
-
         <div class="tab-pane fade" id="">
 
         </div>
-        @*<div class="position-relative">
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead class="float-left float-md-none" style="clear:both">
-                            <tr>
-                                <th class="d-block d-md-table-cell">#</th>
-                                <th class="d-block d-md-table-cell">First</th>
-                                <th class="d-block d-md-table-cell">Last</th>
-                                <th class="d-block d-md-table-cell">Handle</th>
-                            </tr>
-                        </thead>
-                        <tbody class="float-left  float-md-none">
-                            <tr class="float-left float-md-none ">
-                                <td class="d-block d-md-table-cell">1</td>
-                                <td class="d-block d-md-table-cell">Mark</td>
-                                <td class="d-block d-md-table-cell">Otto</td>
-                                <td class="d-block d-md-table-cell">mdo</td>
-                            </tr>
-                            <tr class="float-left float-md-none ">
-                                <td class="d-block d-md-table-cell">2</td>
-                                <td class="d-block d-md-table-cell">Jacob</td>
-                                <td class="d-block d-md-table-cell">Thornton</td>
-                                <td class="d-block d-md-table-cell">fat</td>
-                            </tr>
-                            <tr class="float-left float-md-none ">
-                                <td class="d-block d-md-table-cell">3</td>
-                                <td class="d-block d-md-table-cell">Larry</td>
-                                <td class="d-block d-md-table-cell">the Bird</td>
-                                <td class="d-block d-md-table-cell">twitter</td>
-                            </tr>
-                            <tr class="float-left float-md-none ">
-                                <td class="d-block d-md-table-cell">3</td>
-                                <td class="d-block d-md-table-cell">Larry</td>
-                                <td class="d-block d-md-table-cell">the Bird</td>
-                                <td class="d-block d-md-table-cell">twitter</td>
-                            </tr>
-                            <tr class="float-left float-md-none ">
-                                <td class="d-block d-md-table-cell">3</td>
-                                <td class="d-block d-md-table-cell">Larry</td>
-                                <td class="d-block d-md-table-cell">the Bird</td>
-                                <td class="d-block d-md-table-cell">twitter</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>*@
     </div>
 </div>
 
