--- a/KINOv2/KINOv2/Views/Home/Affiche.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Affiche.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Афиша";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h1>@ViewData["Title"]</h1>
 <h2>@ViewData["Message"]</h2>
 
 <div>
@@ -20,7 +20,7 @@
         <div class="row">
             @foreach (Film film in ViewData["Films"] as IEnumerable<Film>)
     {
-        <div class="col-9 col-md-4 mb-3 mx-auto">
+        <div class="col-9 col-md-4 mb-3 mx-auto mt-2">
             @{
                 @*<div class="poster-image" style="background-image: url('@Url.Content("~/images/Posters/" + film.Poster)')"></div>
             <div class="film-info col-md-6">
@@ -38,7 +38,7 @@
                 </div>
             }
         </div>
-        <div class="col-12 col-md-4 mb-3">
+        <div class="col-9 col-md-4 mb-3 mx-auto">
             @{
                 @*<div class="poster-image" style="background-image: url('@Url.Content("~/images/Posters/" + film.Poster)')"></div>
             <div class="film-info col-md-6">
@@ -56,7 +56,7 @@
                 </div>
             }
         </div>
-        <div class="col-12 col-md-4 mb-3">
+        <div class="col-9 col-md-4 mb-3 mx-auto">
             @{
                 @*<div class="poster-image" style="background-image: url('@Url.Content("~/images/Posters/" + film.Poster)')"></div>
             <div class="film-info col-md-6">
