--- a/KINOv2/KINOv2/Views/Home/Comments.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Comments.cshtml
@@ -19,7 +19,10 @@
                         <span>@comment.ApplicationUser.UserName</span>
                     </div>
                     <div class="col-8 order-2">
+                        @if (comment.Date != null)
+                        {
                          <span>@comment.Date.Value.ToShortDateString() @comment.Date.Value.ToShortTimeString()</span>
+                        }
                     </div>
                     <a class="comment-reply col-md-2 col-4 order-3 text-info text-right" data-user-name="@comment.ApplicationUser.UserName" href="#">Ответить</a>
                     @if (!(comment.Rating.Where(x => x.ApplicationUserId == UserManager.GetUserId(User)).FirstOrDefault() is null))
